...
        android:id="@+id/textview0"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:textColor="@color/colorSecondaryText"/>

    <TextView
        android:text="Deadline:"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:textColor="@color/colorSecondaryText"
        android:textSize="16dip"/>

    <TextView
...
