<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <RelativeLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@color/colorAccent"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:text="Create Task"
                android:textColor="@color/colorSecondaryText"
                android:textSize="20sp" />
        </RelativeLayout>

        <!-- Task Name Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_taskName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text|textCapWords"
                android:hint="Task Name" />
        </android.support.design.widget.TextInputLayout>

        <!-- Task Summary Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_taskSummary"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:lines="4"
                android:inputType="textMultiLine|textAutoCorrect"
                android:background="@drawable/textview_border"
                android:hint="Task Details"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Task Deadline -->
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/relativeLayout2"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >


            <TextView
                android:id="@+id/textview1"
                android:text="@string/pick_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <Button
                android:id="@+id/btn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_date"
                android:layout_marginBottom="24dp"
                android:onClick="showDatePickerDialog"
                android:layout_alignParentRight="true" />

        </RelativeLayout>

        <!-- Task Notifications -->
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/relativeLayout3"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >


            <TextView
                android:id="@+id/textview3"
                android:text="Reminders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.example.grouptaskapp.SingleSpinner
                android:id="@+id/singleSpinner2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" />

        </RelativeLayout>

        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/relativeLayout1"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <TextView
                android:id="@+id/textview2"
                android:text="Add Users"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <com.example.grouptaskapp.MultiSpinnerSearch
                android:id="@+id/multiSpinner"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp" />


        </RelativeLayout>


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_addTask"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="Create Task"/>

    </LinearLayout>
</ScrollView>
